gcc/testsuite/rust/rustc/ui/cast/cast-to-unsized-trait-object-suggestion.rs
fn main() {
    &1 as dyn Send; // { dg-error ".E0620." "" { target *-*-* } }
    Box::new(1) as dyn Send; // { dg-error ".E0620." "" { target *-*-* } }
}

